# Lee_Scripts

./: .cursorrules  .gitignore  Lee_Startup - Auto Launch Workstations.lua  Lee_UI - Demo.lua  README.md  index.xml  reaper_plugin_functions.h
C_Extensions/DropStation/: .gitignore  CMakeLists.txt  README.md
C_Extensions/DropStation/scripts/: build_and_deploy.ps1
C_Extensions/DropStation/src/: DragDrop.cpp  DragDrop.h  main.cpp
C_Extensions/LeeTools/: .gitignore  CMakeLists.txt  README.md
C_Extensions/LeeTools/scripts/: build_and_deploy.ps1
C_Extensions/LeeTools/src/features/drop_station/: Register.cpp  Register.h
C_Extensions/LeeTools/src/features/drop_station/domain/: Model.cpp  Model.h  SliceReplicator.cpp  SliceReplicator.h  Store.cpp  Store.h
C_Extensions/LeeTools/src/features/drop_station/ui/: Window.cpp  Window.h
C_Extensions/LeeTools/src/features/item_hub/: Register.cpp  Register.h
C_Extensions/LeeTools/src/features/item_hub/domain/: ParamSpec.cpp  ParamSpec.h  Session.cpp  Session.h
C_Extensions/LeeTools/src/features/item_hub/ui/: HubWindow.cpp  HubWindow.h
C_Extensions/LeeTools/src/features/project_explorer/: Register.cpp  Register.h
C_Extensions/LeeTools/src/features/project_explorer/ui/: Window.cpp  Window.h
C_Extensions/LeeTools/src/features/splitter/: Register.cpp  Register.h
C_Extensions/LeeTools/src/features/splitter/domain/: AudioBuffer.h  AudioReader.cpp  AudioReader.h  BatchJob.cpp  BatchJob.h  ItemSnapshot.cpp  ItemSnapshot.h  Prefs.cpp  Prefs.h  PreviewPlayer.cpp  PreviewPlayer.h  Selection.cpp  Selection.h  SpecDefaults.h  SplitEngine.cpp  SplitEngine.h  SplitMode.h  SplitParams.h  TrackWriter.cpp  TrackWriter.h  WavWriter.cpp  WavWriter.h
C_Extensions/LeeTools/src/features/splitter/domain/algorithms/: Algorithms.h  FgAmbient.cpp  Hpss.cpp  MidSide.cpp  TonalNoise.cpp  TransientSustain.cpp
C_Extensions/LeeTools/src/features/splitter/ui/: SplitterWindow.cpp  SplitterWindow.h
C_Extensions/LeeTools/src/platform/win/: OsFileDrag.cpp  OsFileDrag.h
C_Extensions/LeeTools/src/plugin/: AppTimer.cpp  AppTimer.h  CommandRegistry.cpp  CommandRegistry.h  FeatureRegistry.cpp  FeatureRegistry.h  PluginContext.cpp  PluginContext.h  main.cpp
C_Extensions/LeeTools/src/shared/dsp/: Envelope.cpp  Envelope.h  Fft.cpp  Fft.h  Median.cpp  Median.h  Stft.cpp  Stft.h  Wiener.h
C_Extensions/LeeTools/src/shared/reaper/: JsApi.cpp  JsApi.h  ReaImGuiApi.cpp  ReaImGuiApi.h
C_Extensions/LeeTools/src/shared/ui/: LeeUiTheme.cpp  LeeUiTheme.h
Doc/: CONVERSATION_SUMMARY.md  DEPLOYMENT_COMPARISON.md  LOKASENNA_RADIAL_MENU_ANALYSIS.md  MAINTENANCE.md  MANTRIKA_RADIAL_MENU_ANALYSIS.md  RADIAL_MENU_IMPLEMENTATION_OPTIONS.md  README.md  REAPER_CPP_EXTENSION_DEVELOPMENT.md  RTK_VS_REAIMGUI_COMPARISON.md  SCRIPT_ANALYSIS.md  SLINT_FOR_REAPER_ANALYSIS.md  UI_FRAMEWORKS_RESOURCES.md  VERSION_CONTROL_GUIDE.md  nvkLearn.md  新建 文本文档.txt
FX/: Lee_FX - Close All FX Windows.lua  Lee_FX - Manager.lua  Lee_FX - Open All Track FX Windows.lua  Lee_FX - Toggle Bypass or Active.lua  Lee_FX - Toggle FX Chain Window.lua
Items/: Lee_Items - Add Fade In Out.lua  Lee_Items - Align to Zero.lua  Lee_Items - Bounce Items.lua  Lee_Items - Crop selected items to regions.lua  Lee_Items - Implode Mono to Stereo.lua  Lee_Items - Jump to Next.lua  Lee_Items - Split at Time Selection.lua  Lee_Items - Toggle Time Selection to Items.lua  Lee_Items - Trim to Time Selection.lua
Main/: Lee_Main - Project File Explorer.lua  Lee_Main - Woosh Sound Generator.lua
Markers/: Lee_Markers - Align Items To Markers.lua  Lee_Markers - Align Selected Items to Same Name Markers.lua  Lee_Markers - Delete Markers In Time Selection.lua  Lee_Markers - Take Marker Manager.lua  README.md
RadialMenu_Tool/: .gitignore  CHANGELOG.md  DEBUG_PADDING.lua  Lee_RadialMenu.lua  Lee_RadialMenu_Setup.lua  Lee_RadialMenu_clear_cache.lua  Lee_RadialMenu_reset_state.lua  README.md  config.example.json
(+314 files in other folders)
